get list of devices, actions and sensors now in core and web-api
