# services/core/device/app/swagger.yml
@@ -21,6 +21,17 @@ paths:
       responses:
         200:    # status code
           description: A device
+    get:
+      summary: Returns a device list.
+      operationId: device_api.get_devices
+      produces:
+        - application/json
+      responses:
+        200:    # status code
+          description: device was returned sucessfully.
+      parameters:
+        - $ref: '#/parameters/userid'
+        - $ref: '#/parameters/getDevices'
   /users/{userid}/devices/{deviceid}:
     get:
       summary: Returns a device.
@@ -179,6 +190,19 @@ parameters:
         public:
           type: boolean
         accessToken:
+          type: array
+          items:
+            type: string
+  getDevices:
+    in: body
+    name: deviceIdList
+    description: a list of device ids
+    schema:
+      type: object
+      required:
+        - deviceList
+      properties:
+        deviceList:
           type: array
           items:
             type: string
